--- a/www/frontend/pages/printFiles.html
+++ b/www/frontend/pages/printFiles.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/theme-files.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/theme-index.css">
 
     <!-- default scripts -->
     <script src="/script/dataHandler.js"></script> 
