--- a/www/frontend/index.html
+++ b/www/frontend/index.html
@@ -1,143 +1,117 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Printer Interface</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Printer Interface</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,300i,400,400i,500,600,700" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet" />
+		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,300i,400,400i,500,600,700" rel="stylesheet" /> -->
 
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/theme-index.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/theme-index.css" />
 
-    <!-- default scripts -->
-    <script src="/script/dataHandler.js"></script> 
-    <script src="/script/cookies.js"></script> 
-    <script src="/script/checklogin.js"></script>
+		<!-- default scripts -->
+		<script src="/script/dataHandler.js"></script>
+		<script src="/script/cookies.js"></script>
+		<script src="/script/checklogin.js"></script>
 
-    <!-- custom scripts -->
-    
-</head>
-<body>
-    <!-- navigation -->
-    <header class="o-row o-row--md o-row--header">
-        <div class="o-container-head o-section">
-            <div class="c-logo">
-                <h1 class="c-lead c-lead--xxl u-color-theme-items">
-                    Printer Controller
-                </h1>
-            </div>
-            
-        </div>
-        <div class="o-container-head o-section">
-            <div class="c-header">
-                <div class="c-header__nav c-header__nav--main">
-                    <nav class="c-nav">
-                        <ul class="o-list c-nav__list">
-                            <li class="c-nav__item is-selected"><a class="c-nav__link" href="/index.html">Home</a></li>
-                            <li class="c-nav__item"><a class="c-nav__link" href="/pages/graphs.html">Graphs</a></li>
-                            <li class="c-nav__item"><a class="c-nav__link" href="/pages/printerControls.html">Controls</a></li>
-                            <!-- <li class="c-nav__item"><a class="c-nav__link" href="/pages/printDetection.html">Failure_Detector</a></li> -->
-                            <li class="c-nav__item"><a class="c-nav__link" href="/pages/printFiles.html">Gcode_upload</a></li>
-                            <li class="c-nav__item"><a class="c-nav__link" href="/pages/database.html">Database_Entries</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="c-header__nav">
-                    <nav class="c-nav">
-                        <ul class="o-list c-nav__list">
-                            <li class="c-nav__item">
-                                <a class="c-nav__icon" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
-                                        <g id="Symbol_1_1" data-name="Symbol 1 – 1" transform="translate(-1744 -124)">
-                                          <g id="Rectangle_19" data-name="Rectangle 19" transform="translate(1744 124)" fill="none" stroke="#fff" stroke-width="1">
-                                            <rect width="50" height="50" rx="10" stroke="none"/>
-                                            <rect x="0.5" y="0.5" width="49" height="49" rx="9.5" fill="none"/>
-                                          </g>
-                                          <g id="Rectangle_72" data-name="Rectangle 72" transform="translate(1752.444 132)" fill="none" stroke="#fff" stroke-width="1">
-                                            <rect width="13" height="13" rx="2" stroke="none"/>
-                                            <rect x="0.5" y="0.5" width="12" height="12" rx="1.5" fill="none"/>
-                                          </g>
-                                          <g id="Rectangle_73" data-name="Rectangle 73" transform="translate(1772.556 132)" fill="none" stroke="#fff" stroke-width="1">
-                                            <rect width="13" height="13" rx="2" stroke="none"/>
-                                            <rect x="0.5" y="0.5" width="12" height="12" rx="1.5" fill="none"/>
-                                          </g>
-                                          <g id="Rectangle_74" data-name="Rectangle 74" transform="translate(1752.444 153)" fill="none" stroke="#fff" stroke-width="1">
-                                            <rect width="13" height="13" rx="2" stroke="none"/>
-                                            <rect x="0.5" y="0.5" width="12" height="12" rx="1.5" fill="none"/>
-                                          </g>
-                                          <g id="Rectangle_75" data-name="Rectangle 75" transform="translate(1772.556 153)" fill="none" stroke="#fff" stroke-width="1">
-                                            <rect width="13" height="13" rx="2" stroke="none"/>
-                                            <rect x="0.5" y="0.5" width="12" height="12" rx="1.5" fill="none"/>
-                                          </g>
-                                        </g>
-                                      </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
+		<!-- custom scripts -->
+	</head>
+	<body>
+		<!-- navigation -->
+		<header class="">
+			<div class="">
+				<div class="c-header">
+					<h1 class="c-logo">
+						<svg xmlns="http://www.w3.org/2000/svg" width="198.558" height="46.988" viewBox="0 0 198.558 46.988">
+							<g id="Group_20" data-name="Group 20" transform="translate(-171.523 -24.012)">
+								<g id="Group_19" data-name="Group 19" transform="translate(171.523 44.9) rotate(-56)">
+									<g id="Group_16" data-name="Group 16" transform="translate(0)">
+										<path id="Path_38" data-name="Path 38" d="M12.447,0,0,3.112V28.005Z" transform="translate(12.447 18.67)" fill="#3f3f3f" />
+										<g id="Path_37" data-name="Path 37" transform="translate(12.447 12.447)" fill="#3f3f3f">
+											<path
+												d="M -0.1000013276934624 9.463161468505859 L -0.1000013276934624 9.335081100463867 L -0.1000013276934624 1.50390621911356e-06 L -0.1000013276934624 -0.1623985022306442 L 0.04500867053866386 -0.08929849416017532 C 4.234268665313721 2.022541522979736 12.22341823577881 6.039651393890381 12.47503852844238 6.127561569213867 L 12.46798896789551 6.147734642028809 L 12.47102832794189 6.320401668548584 L 0.02424867264926434 9.43209171295166 L -0.1000013276934624 9.463161468505859 Z"
+												stroke="none"
+											/>
+											<path
+												d="M -1.32812499487045e-06 9.335081100463867 L 12.44677829742432 6.223391532897949 C 12.27123832702637 6.186031341552734 -1.32812499487045e-06 1.50390621911356e-06 -1.32812499487045e-06 1.50390621911356e-06 L -1.32812499487045e-06 9.335081100463867 M -0.2000013291835785 9.591241836547852 L -0.2000013291835785 9.335081100463867 L -0.2000013291835785 1.50390621911356e-06 L -0.2000013291835785 -0.3247984945774078 L 0.09002867341041565 -0.1785884946584702 C 3.435228586196899 1.50775146484375 12.18747901916504 5.911121368408203 12.50951862335205 6.033701419830322 C 12.49983882904053 6.030011653900146 12.49259853363037 6.028661727905273 12.4884090423584 6.027771472930908 L 12.49528884887695 6.417421340942383 L 0.048508670181036 9.529111862182617 L -0.2000013291835785 9.591241836547852 Z"
+												stroke="none"
+												fill="#fff"
+											/>
+										</g>
+										<path
+											id="Path_33"
+											data-name="Path 33"
+											d="M0,0,12.447,18.67l-5.01-2.505L0,12.447V0H0"
+											transform="translate(12.447)"
+											fill="#fff"
+											stroke="#3f3f3f"
+											stroke-linejoin="bevel"
+											stroke-width="0.5"
+										/>
+										<ellipse id="Ellipse_4" data-name="Ellipse 4" cx="6.807" cy="6.612" rx="6.807" ry="6.612" transform="translate(5.834 10.891)" fill="#b7494e" />
+										<path id="Path_36" data-name="Path 36" d="M0,0,12.447,3.112V28.005Z" transform="translate(0 18.67)" fill="#3f3f3f" />
+										<path id="Path_34" data-name="Path 34" d="M0,18.67,12.447,0V12.447Z" fill="#3f3f3f" />
+										<g id="Path_35" data-name="Path 35" transform="translate(0 12.447)" fill="#3f3f3f">
+											<path
+												d="M 12.34677886962891 9.207009315490723 L 0.2973334789276123 6.194652557373047 C 1.927001357078552 5.411948680877686 10.21512794494629 1.236853241920471 12.34677886962891 0.1623976975679398 L 12.34677886962891 9.207009315490723 Z"
+												stroke="none"
+											/>
+											<path
+												d="M 12.24677848815918 9.078924179077148 L 12.24677848815918 0.3247888088226318 C 7.596882343292236 2.668545007705688 2.282175064086914 5.340225219726563 0.5875139832496643 6.164112567901611 L 12.24677848815918 9.078924179077148 M 12.44677829742432 9.335081100463867 L -1.32812499487045e-06 6.223391532897949 C 0.1755386739969254 6.186031341552734 12.44677829742432 1.50390621911356e-06 12.44677829742432 1.50390621911356e-06 L 12.44677829742432 9.335081100463867 Z"
+												stroke="none"
+												fill="#fff"
+											/>
+										</g>
+										<path id="Path_39" data-name="Path 39" d="M0,0,12.447,18.67l-5.01-2.505L0,12.447V0H0" transform="translate(12.447)" fill="#fff" />
+										<path id="Path_40" data-name="Path 40" d="M0,0V46.675" transform="translate(12.447)" fill="none" stroke="#b7494e" stroke-linecap="square" stroke-width="0.2" />
+									</g>
+								</g>
+								<text
+									id="Ender_X-3000"
+									data-name="Ender X-3000"
+									transform="translate(219.302 56.734)"
+									fill="#2f4455"
+									font-size="25"
+									font-family="Roboto-Thin, Roboto"
+									font-weight="200"
+								>
+									<tspan x="0" y="0">Ender</tspan>
+									<tspan y="0" fill="#b7494e">X</tspan>
+									<tspan y="0">-3000</tspan>
+								</text>
+								<line id="Line_10" data-name="Line 10" x2="152.938" transform="translate(217.144 60.793)" fill="none" stroke="#b7494e" stroke-width="1" />
+							</g>
+						</svg>
+					</h1>
+					<div class="c-header__nav">
+						<nav class="c-nav">
+							<ul class="o-list c-nav__list">
+								<li class="c-nav__item is-selected"><a class="c-nav__link" href="/index.html">Home</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/graphs.html">Graphs</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/printerControls.html">Controls</a></li>
+								<!-- <li class="c-nav__item"><a class="c-nav__link" href="/pages/printDetection.html">Failure_Detector</a></li> -->
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/printFiles.html">Gcode upload</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/database.html">Database Entries</a></li>
+							</ul>
+						</nav>
+					</div>
+					<div class="c-header__login">
+						<nav class="c-nav">
+							<ul class="o-list c-nav__list">
+								<li class="c-nav__item"><a class="c-nav__link" href="/index.html">Sign In</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</header>
 
-    <section class="o-row o-row--lg u-pt-clear">
-        <div class="o-container">
-            <article class="o-section o-section--lg">
-                <div class="o-layout o-layout--align-center">
-                    <div class="o-layout-item u-3-of-5">
-                        <div class="o-card--image">
-                            <img class="o-card__image" src="/img/neonbrand-560705-unsplash.jpg" alt="print">
-                        </div>
-                    </div>
-                    <div class="o-layout-item u-2-of-5">
-                        <div class="o-card--text o-card__right">
-                            <h1 class="c-lead-lg">Lorem Ipsum</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint delectus quasi, laborum eos voluptatem, 
-                            fuga rem sed minus, explicabo tempora perspiciatis. Voluptatibus eos consequatur rem! Molestias sequi minima esse ducimus.</p>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article class="o-section o-section--lg">
-                <div class="o-layout o-layout--align-center o-layout--row-reverse">
-                    <div class="o-layout-item u-2-of-5">
-                        <div class="o-card--image">
-                            <img class="o-card__image" src="/img/markus-spiske-104910-unsplash.jpg" alt="print">
-                        </div>
-                    </div>
-                    <div class="o-layout-item u-3-of-5">
-                        <div class="o-card--text o-card__left">
-                            <h1 class="c-lead-lg">Lorem Ipsum</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint delectus quasi, laborum eos voluptatem, fuga rem sed minus, explicabo tempora perspiciatis. Voluptatibus eos consequatur rem! Molestias sequi minima esse ducimus.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint delectus quasi, laborum eos voluptatem, fuga rem sed minus, explicabo tempora perspiciatis. Voluptatibus eos consequatur rem! Molestias sequi minima esse ducimus.</p>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article class="o-section o-section--lg">
-                <div class="o-layout o-layout--align-center">
-                    <div class="o-layout-item u-3-of-5">
-                        <div class="o-card--image">
-                            <img class="o-card__image" src="/img/zmorph-multitool-3d-printer-1221522-unsplash.jpg" alt="print">
-                        </div>
-                    </div>
-                    <div class="o-layout-item u-2-of-5">
-                        <div class="o-card--text o-card__right">
-                            <h1 class="c-lead-lg">Lorem Ipsum</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint delectus quasi, laborum eos voluptatem, 
-                            fuga rem sed minus, explicabo tempora perspiciatis. Voluptatibus eos consequatur rem! Molestias sequi minima esse ducimus.</p>
-                        </div>
-                    </div>
-                </div>
-            </article>
-        </div>
-    </section>
-
-
-
-</body>
+		<section class="o-row o-row--lg u-pt-clear">
+			<div class="o-container"></div>
+		</section>
+	</body>
 </html>
