--- a/www/frontend/index.html
+++ b/www/frontend/index.html
@@ -11,7 +11,6 @@
 
 		<link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="/css/theme-index.css" />
 
 		<!-- default scripts -->
 		<script src="/script/dataHandler.js"></script>
@@ -89,19 +88,17 @@
 					</h1>
 					<div class="c-header__nav">
 						<nav class="c-nav">
-							<ul class="o-list c-nav__list">
+							<ul class="o-list c-nav__list u-m-clear">
 								<li class="c-nav__item is-selected"><a class="c-nav__link" href="/index.html">Home</a></li>
 								<li class="c-nav__item"><a class="c-nav__link" href="/pages/graphs.html">Graphs</a></li>
-								<li class="c-nav__item"><a class="c-nav__link" href="/pages/printerControls.html">Controls</a></li>
-								<!-- <li class="c-nav__item"><a class="c-nav__link" href="/pages/printDetection.html">Failure_Detector</a></li> -->
-								<li class="c-nav__item"><a class="c-nav__link" href="/pages/printFiles.html">Gcode upload</a></li>
-								<li class="c-nav__item"><a class="c-nav__link" href="/pages/database.html">Database Entries</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/controls.html">Controls</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/terminal.html">Terminal</a></li>
 							</ul>
 						</nav>
 					</div>
 					<div class="c-header__login">
 						<nav class="c-nav">
-							<ul class="o-list c-nav__list">
+							<ul class="o-list c-nav__list u-m-clear">
 								<li class="c-nav__item"><a class="c-nav__link" href="/index.html">Sign In</a></li>
 							</ul>
 						</nav>
