--- a/www/frontend/pages/controls.html
+++ b/www/frontend/pages/controls.html
@@ -245,10 +245,10 @@
 											</div>
 										</div>
 										<div>
-											<input class="c-button--distance js-button-0.1" type="button" value="0.1" />
-											<input class="c-button--distance js-button-1" type="button" value="1" />
-											<input class="c-button--distance js-button-10 c-button--active" type="button" value="10" />
-											<input class="c-button--distance js-button-100" type="button" value="100" />
+											<input class="c-button--distance js-button-distance" type="button" value="0.1" />
+											<input class="c-button--distance js-button-distance" type="button" value="1" />
+											<input class="c-button--distance js-button-distance" type="button" value="10" />
+											<input class="c-button--distance js-button-distance" type="button" value="100" />
 										</div>
 									</div>
 								</div>
