--- a/www/frontend/pages/controls.html
+++ b/www/frontend/pages/controls.html
@@ -92,8 +92,8 @@
 					<div class="c-header__nav">
 						<nav class="c-nav">
 							<ul class="o-list c-nav__list u-m-clear">
-								<li class="c-nav__item"><a class="c-nav__link" href="/index.html">Home</a></li>
-								<li class="c-nav__item"><a class="c-nav__link" href="/pages/graphs.html">Graphs</a></li>
+								<li class="c-nav__item future"><a class="c-nav__link" href="/index.html">Home</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/temperatures.html">Temperatures</a></li>
 								<li class="c-nav__item is-selected"><a class="c-nav__link" href="/pages/controls.html">Controls</a></li>
 								<li class="c-nav__item"><a class="c-nav__link" href="/pages/terminal.html">Terminal</a></li>
 							</ul>
@@ -254,7 +254,7 @@
 								</div>
 								<div class="o-layout__item u-1-of-2-bp4">
 									<div class="o-layout o-layout--gutter o-layout--justify-center">
-										<div class="o-layout__item u-1-of-2-bp4">
+										<div class="o-layout__item u-1-of-2-bp4 future">
 											<h1 class="c-lead-xl u-color-main-red o-text-center">Extruder</h1>
 											<div class="o-layout o-layout--justify-center">
 												<div class="o-layout__item u-4-of-5-bp4">
