--- a/www/frontend/pages/terminal.html
+++ b/www/frontend/pages/terminal.html
@@ -90,8 +90,8 @@
 					<div class="c-header__nav">
 						<nav class="c-nav">
 							<ul class="o-list c-nav__list u-m-clear">
-								<li class="c-nav__item"><a class="c-nav__link" href="/index.html">Home</a></li>
-								<li class="c-nav__item"><a class="c-nav__link" href="/pages/graphs.html">Graphs</a></li>
+								<li class="c-nav__item future"><a class="c-nav__link" href="/index.html">Home</a></li>
+								<li class="c-nav__item"><a class="c-nav__link" href="/pages/temperatures.html">Temperatures</a></li>
 								<li class="c-nav__item"><a class="c-nav__link" href="/pages/controls.html">Controls</a></li>
 								<li class="c-nav__item is-selected"><a class="c-nav__link" href="/pages/terminal.html">Terminal</a></li>
 							</ul>
