--- a/www/frontend/index.html
+++ b/www/frontend/index.html
@@ -20,8 +20,9 @@
 		<!-- custom scripts -->
 		<script>
 			document.addEventListener('DOMContentLoaded', () => {
+				console.info('test');
 				window.location = `http://${window.location.host}/pages/controls.html`;
-			}));
+			});
 		</script>
 	</head>
 	<body>
